force-app/main/default/objects/County__c/fields/Assessor_URL__c.field-meta.xml
<CustomField>
    <fullName>Assessor_URL__c</fullName>
    <label>Assessor URL</label>
    <type>Url</type>
</CustomField>