force-app/main/default/objects/County__c/fields/Backup_County_ANIs__c.field-meta.xml
<CustomField>
    <fullName>Backup_County_ANIs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>County to inherit ANI&apos;s from if this County has no active ANIs</description>
    <label>Backup County ANIs</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Counties Inheriting ANI&apos;s</relationshipLabel>
    <relationshipName>Counties_Inheriting_ANIs</relationshipName>
    <type>Lookup</type>
</CustomField>