force-app/main/default/objects/County__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Center</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>