force-app/main/default/objects/County__c/fields/Northeast__c.field-meta.xml
<CustomField>
    <fullName>Northeast__c</fullName>
    <label>Northeast</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>