force-app/main/default/objects/County__c/fields/Northwest__c.field-meta.xml
<CustomField>
    <fullName>Northwest__c</fullName>
    <label>Northwest</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>