force-app/main/default/objects/County__c/fields/Southeast__c.field-meta.xml
<CustomField>
    <fullName>Southeast__c</fullName>
    <label>Southeast</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>