force-app/main/default/objects/County__c/fields/Southwest__c.field-meta.xml
<CustomField>
    <fullName>Southwest__c</fullName>
    <label>Southwest</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>