force-app/main/default/objects/County__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessor_URL__c</columns>
    <columns>Backup_County_ANIs__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>